# general_5sem_OSiSP

./: README.md
reports/Borovsky_Maksim/lab1-2/rep/: lab1-2.docx
reports/Borovsky_Maksim/lab1-2/src/: Food.cs  PauseMenu.cs  Snake.cs
reports/Borovsky_Maksim/lab3/rep/: lab3.docx
reports/Borovsky_Maksim/lab4/rep/: lab4.docx
reports/Borovsky_Maksim/lab4/src/: FormClient.cs  FormServer.cs  MainMenu.cs
reports/Borovsky_Maksim/lab5/rep/: lab5.docx
reports/Borovsky_Maksim/lab5/src/: UpdateVersion.cs
reports/Borovsky_Maksim/rep/: lab1-3.docx
reports/Galanin/1/: README.md
reports/Galanin/1/rep/: .gitignore  Makefile  README.md  docker-compose.yml  env.sty  main.tex
reports/Galanin_Pavel/lab1/: Makefile  README.md
reports/Galanin_Pavel/lab3/: README.md
reports/Galanin_Pavel/lab3/src/: gpi_copy_dll.bat
reports/Galanin_Pavel/lab4/src/: gpi_copy_dll.bat  gpi_copy_to_server.bat
reports/Galanin_Pavel/lab6/src/: gpi_inst.nsi
reports/Gribovskij_Dima/lab1/rep/: lab1.docx
reports/Gribovskij_Dima/lab1/src/: CMakeLists.txt  tetrixboard.cpp  tetrixboard.h  tetrixpiece.cpp  tetrixpiece.h  tetrixwindow.cpp  tetrixwindow.h
reports/Gribovskij_Dima/lab3/rep/: lab3.docx
reports/Gribovskij_Dima/lab4-5/rep/: lab4-5.docx
reports/Gritsak_Alexandra/lab1/rep/: 1.docx  ЛАБ1.ОCиСП.docx
reports/Gritsak_Alexandra/lab1/src/: game.cpp  main.cpp  mybutton.cpp  startwindow.cpp  startwindow.h
reports/Gritsak_Alexandra/lab3/rep/: ЛАБ3.ОCиСП.docx
reports/Gritsak_Alexandra/lab3/src/: about.cpp  about.h  about.pro  (+14 more)
reports/Kalinovskiy/1/: MainWidget.cpp  MainWidget.h
(+451 files in other folders)
